@startuml
'https://plantuml.com/class-diagram


legend top
    | Couleur  | Signification  |
    |<#Blue>|  Agrégation |
    |<#Green>|  Composition  |
    |<#Red>|  Extension  |
end legend


class Bishop
{
    + <<Create>> Bishop(couleur : Color)
    + getLegalMoves(tiles : Tile[][], posX : int, posY : int) : List<Tile>
}

class Board
{
    - tiles : Tile[][]
    - pf : PieceFactory
    - blackKing : King
    - whiteKing : King
    - selectedTile : Tile
    + <<Create>> Board()
    - initPieces()
    - initTiles()
    + clickedOnTile(posX : int, posY : int, colorCurrentPlayer : Color)
    + kingIsChecked(kingTile : Tile) : boolean
    + KingIsCheckedMate(kingTile : Tile)
    + simulateMove(src: Tile, dest : Tile)
    + canMoveTo(src : Tile, dest : Tile) : boolean
    + tileIsEmpty(tile : Tile) : boolean
    + move(src : Tile, dest : Tile, colorCurrentPlayer : Color) : Piece
    - getKingTile(king : King) : Tile
    + getSelectedTile() : Tile
}

Enum Color
{
    BLACK,
    WHITE
}

class Game
{
    - board : Board
    - whitePlayer : Player
    - blackPlayer : Player
    - currentPlayer : Player
    - observer : IModelObserver
    + <<Create>> Game(whitePlayerName : String, blackPlayerName : String)
    + gameStarted(whiteName : String, blackName : String)
    + tileClicked(posX : int, posY : int)
    + NextPlayer()
    + nextRound()
    - notifyGameStarted()
    - notifyTileSelected(tile : Tile)
    - notifyMovedPiece(piece : Piece)
    - notifyNextRound()
    - notifyEndGame(couleur : Color)
    + setObserver(observer : IModelObserver)

}

class King
{
    - isChecked : boolean
    - isCheckedMate : boolean
    + <<Create>> King(couleur : Color)
    + getLegalMoves(tiles : Tile[][], posX : int, posY : int) : List<Tile>
    + getIsChecked() : boolean
    + getIsCheckedMate() : boolean
    + setChecked(isChecked : boolean)
    + setCheckedMate(isCheckedMate : boolean)
}

class Knight
{
    + <<Create>> Knight(couleur : Color)
    + getLegalMoves(tiles : Tile[][], posX : int, posY : int) : List<Tile>
}

class Pawn
{
    - moved : boolean = false
    + <<Create>> Pawn(couleur : Color)
    + getLegalMoves(tiles : Tile[][], posX : int, posY : int) : List<Tile>
    + getIsMoved() : boolean
}

abstract class Piece
{
    # color : Color
    + getColor() : Color
    + getLegalMoves(tiles : Tile[][], posX : int, posY : int) : List<Tile>
}

class PieceFactory
{
    + <<Create>> PieceFactory()
    + createRook(couleur : Color) : <<Create>> Rook(couleur : Color)
    + createKnight(couleur : Color) : <<Create>> Knight(couleur : Color)
    + createBishop(couleur : Color) : <<Create>> Bishop(couleur : Color)
    + createQueen(couleur : Color) :  <<Create>> Queen(couleur : Color)
    + createKing(couleur : Color) :  <<Create>> King(couleur : Color)
    + createPawn(couleur : Color) :  <<Create>> Pawn(couleur : Color)
}


class Player
{
    - namePlayer : String
    - lostPieces : List<Piece>
    - colorOfPieces : Color
    - played : boolean = false
    + <<Create>> Player(name : String, colorOfPieces : Color)
    + getPlayerName() : String
    + getLostPieces() : List<Piece>
    + addLostPiece(piece : Piece)
    + getColorOfPieces() : Color
}

class Queen
{
    + <<Create>> Queen(couleur : Color)
    + getLegalMoves(tiles : Tile[][], posX : int, posY : int) : List<Tile>
}

class Rook
{
   + <<Create>> Rook(couleur : Color)
   + getLegalMoves(tiles : Tile[][], posX : int, posY : int) : List<Tile>
}

class Tile
{
    - piece : Piece
    - posX : int
    - posY : int
    - isClicked : boolean = false
    + <<Create>> Tile()
    + isOccuped() : boolean
    + setPiece(piece : Piece)
    + getIsClicked() : boolean
    + setIsClicked(isClicked : boolean)
    + getPiece() : Piece
    + getPosX() : int
    + getPosY() : int
    + setPosX(posX : int)
    + setPosY(posY : int)
}

Bishop --|> Piece #line:Red
Bishop o--> "use 1 " Color #line:Blue

Board *--> "use" Tile #line:Green
Board *--> "use" PieceFactory #line:Green
Board *--> "use" King #line:Green

Game *--> "use" Board #line:Green
Game *--> "use" Player #line:Green

King --|> Piece #line:Red
King o--> "use 1 " Color #line:Blue

Knight --|> Piece #line:Red
Knight o--> "use 1 " Color #line:Blue

Pawn --|> Piece #line:Red
Pawn o--> "use 1 " Color #line:Blue

PieceFactory *--> "use" Piece #line:Green
PieceFactory *--> "use" Rook #line:Green
PieceFactory *--> "use" Knight #line:Green
PieceFactory *--> "use" Bishop #line:Green
PieceFactory *--> "use" Queen #line:Green
PieceFactory *--> "use" King #line:Green
PieceFactory *--> "use" Pawn #line:Green

Player o--> "use 1 " Color #line:Blue
Player *--> "play with 16" Piece #line:Green

Queen --|> Piece #line:Red
Queen o--> "use 1 " Color #line:Blue

Rook --|> Piece #line:Red
Rook o--> "use 1 " Color #line:Blue

Tile *--> "use" Piece #line:Green

@enduml